# ultimate-alpr-recognizer

./: CMakeLists.txt  Dockerfile  README.md  alpr_engine.cpp  alpr_engine.h  alpr_options.h  input_handler.cpp  input_handler.h  recognizer.cpp  setup.sh
